[package]
name = "first_game"
version = "0.1.0"
edition = "2021"
keywords = ["gamedev", "bevy", "roguelike", "beginner", "pixelart"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# game engine
bevy="0.10.1"
# physic engine
bevy_rapier2d="0.21.0"
# for input user data
leafwing-input-manager = "^0.9.0"
# debug inspector
bevy-inspector-egui = "^0.18.0"
# for map decoration
bevy_ecs_tilemap = "0.10.0"
bevy-parallax = "0.5.0"
