[package]
name = "first_game"
version = "0.1.0"
edition = "2021"
keywords = ["gamedev", "bevy", "roguelike", "beginner", "pixelart"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# game engine
bevy="0.11.0"
# physic engine
bevy_rapier2d="0.22.0"
# for input user data
leafwing-input-manager = "0.10.0"
# debug inspector
bevy-inspector-egui = "0.19.0"
# for map decoration
bevy_ecs_tilemap = "0.11.0"
