[package]
name = "first_game"
version = "0.1.0"
authors = ["Prosto Vlad <git@HunterGooD>"]
edition = "2021"
keywords = ["gamedev", "bevy", "roguelike", "beginner", "pixelart"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
# game engine
bevy="0.11.0" # TODO: features set and disable default features
# physic engine
bevy_rapier2d="0.22.0"
# for input user data
leafwing-input-manager = "0.10.0"
# debug inspector
bevy-inspector-egui = "0.19.0"
# for map decoration
bevy_ecs_tilemap = "0.11.0"
# for assets 
bevy_kira_audio = { version = "0.16" }
bevy_asset_loader = { version = "0.17" }
rand = { version = "0.8.3" }
# keep the following in sync with Bevy's dependencies
winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1.4"

[patch.crates-io]
bevy_ecs_tilemap = {git = "http://github.com/StarArawn/bevy_ecs_tilemap", version = "0.11", branch = "main" }